# Physical-AI-Book-RAG

./: .gitignore  CLAUDE.md  PROJECT_README.md  README.md  docusaurus.config.ts  package.json  sidebars.ts  vercel.json
.specify/memory/: constitution.md
backend/: .env.example  main.py  pyproject.toml
backend/tests/: test_basic.py  test_chunker.py  test_crawler.py  test_embeddings.py  test_end_to_end.py  test_extraction.py  test_vectorstore.py
docs/: intro.md
docs/capstone/: intro.md
docs/module1/: intro.md  nodes-topics-services.md  rclpy.md  urdf.md
docs/module2/: intro.md  physics.md  sensors.md
docs/module3/: intro.md  isaac-sim.md  nav2.md  ros-integration.md
docs/module4/: intro.md  llms-planning.md  whisper.md
docs/overview/: intro.md
history/prompts/001-rag-ingestion/: 0001-rag-content-ingestion-spec.spec.prompt.md  0002-rag-pipeline-implementation-plan.plan.prompt.md  0003-rag-pipeline-tasks.tasks.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/docusaurus-book-physical-ai/: 1-create-feature-spec.docusaurus-book-physical-ai.prompt.md  2-create-implementation-plan.docusaurus-book-physical-ai.prompt.md  3-create-implementation-tasks.docusaurus-book-physical-ai.prompt.md
specs/001-docusaurus-book-physical-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
src/pages/: index.module.css  index.tsx
(+6 files in other folders)
