[project]
name = "backend"
version = "0.1.0"
description = "RAG Content Ingestion System - Crawls Docusaurus documentation, generates embeddings, and stores them in Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=5.5.0",
    "qdrant-client>=1.9.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]
